[revised]finish hergeia website if en version

--- a/en/herlady.html
+++ b/en/herlady.html
@@ -50,10 +50,10 @@
 
                 <div id="navbar-scroll" class="collapse navbar-collapse navbar-themers navbar-right">
                     <ul class="nav navbar-nav">
-                        <li><a href="index.html#intro">Concepts</a></li>
-                        <li><a href="index.html#content-her-feature">Features</a></li>
-                        <li><a href="index.html#goods">Products</a></li>
+                        <li><a href="index.html#intro">Concept and Features</a></li>
+                        <li><a href="index.html#goods">Vaginal Infection</a></li>
                         <li><a href="index.html#contact-her">Contact us</a></li>
+                        <li><a href="https://www.facebook.com/Hergeia/" target="_blank">facebook</a></li>
                         <li><a href="../zh/herlady.html">中文</a></li>
                     </ul>
                 </div>
@@ -67,11 +67,10 @@
                 <div class="intro-box">
                     <div class="intro">
                         <h1 class="wow fadeInLeft">
-                            The most secure and comforting self-examining product for ladies<br><br>
+                            <br>A private product for you to quickly know your vaginal health<br><br>
                         </h1>
                         <div class="head-btn wow fadeInLeft">
-
-                            <a href="#herlady-idea" class="btn-primary-herlady play-market">
+                            <a href="#video" class="btn-primary-herlady play-market">
                                 <i class="fa fa-arrow-down" aria-hidden="true"></i>
                             </a>
                         </div>
@@ -81,54 +80,14 @@
         </div>
 
     </div>
-
-    <!-- 品牌理念 -->
-    <section id="herlady-idea">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 feature-2-pic-what wow fadeInLeft"><img src="../img/her-herlady-what.png" class="img-center" alt="" /></div>
-                <div class="col-md-6 wow fadeInRight">
-                    <div>
-                        <h2 class="herlady-idea-title">What is Hergeia Vaginal Discharge Self-Test</h2>
-                        <p class="herlady-idea-content">Hergeia Vaginal Discharge Self-Test is a testing kit for vaginal discharge.<br>Whenever you feel the discomfort or abnormal discharge from your private part, Hergeia provides the most comforting solution.<br>Stay home, fast, helps you to understand the problem in no time!
-                        </p>
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
-    </section>
-    <!-- Hergeia使用 -->
-    <section id="content-her-ph">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="col-md-12 feature-2-pic wow fadeInLeft">
-                        <p>Hergeia Vaginal Discharge Self-Test detects the pH change of your discharge to analyse your health, raise possible causes of infection, and demonstrates the results by color for easy readout.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 feature-2-pic wow fadeInRight"><img src="../img/her-herlady-ph.png" class="img-center" alt="" />
-                    <div class="box-area">
-                        <p class="herlady-ph-content">Read the color, and learn about your body. Hergeia provides the most comforting testing experience.</p>
-                    </div>
-
-                </div>
-            </div>
-
-
-        </div>
-    </section>
     <!-- Hergeia影片 -->
     <section id="video" class="video">
         <div class="container">
             <div class="row">
                 <div class="main_video_area sections text-center">
                     <div class="head_title">
-                        <h5 class="herlady-movie-title">Why Hergeia ?</h5>
-                        <p class="herlady-movie-content">According to statistics, 75% of women world-wide suffer from vaginal infection at least once in their life time. Therefore, regular stay at home examination ensures the privacy and health of your personal part.</p>
+                        <h5 class="herlady-movie-title">According to statistics, 75% of women world-wide suffer from vaginal infection at least once in their life time</h5>
+                        <p class="herlady-movie-content">Vaginal infections cause itching, irritation, or abnormal odor, which are very uncomfortable, annoying and painful.<br>What is vaginal infection? How to relieves the pain and discomfort? Let the doctor tell you!</p>
                     </div>
                     <div class="main_video_content">
                         <div class="col-sm-4">
@@ -159,7 +118,42 @@
                 </div>
             </div>
         </div>
+    </section>
 
+    <!-- 酸鹼值簡介 2018.07新增 -->
+    <div id="her-ph">
+        <div class="container">
+            <div class="row">
+
+                <!-- feature image -->
+                <div class="col-md-6 col-sm-6 feature-2-pic">
+                    <img src="../img/herlady_pH_en-2.png" alt="image" class="img-responsive-intro">
+                </div>
+
+                <!-- feature content -->
+                <div class="col-md-6 wow fadeInRight">
+                    <h2 class="intro-title">A little pH value change, a big problem in the vaginal health!</h2>
+                    <p class="intro-p">pH value is very important for female vaginal health, and the perfect range of vaginal pH value is 3.8-4.2.<br>If the pH value is exceeding this range, it may induce infection and discomfort!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 使用介紹 2018.07由理念改為介紹 -->
+    <section id="herlady-idea">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 wow fadeInLeft">
+                    <div>
+                        <h2 class="herlady-idea-title"><br><br>How do I know my vaginal pH value?</h2>
+                        <p class="herlady-idea-content">“Hergeia-pH Kit for Vaginal Discharge” is a testing kit for vaginal discharge. It is designed for the quick-examining of vaginal infection.<br><br>All you need is to collect some secretions from the vagina, then you can know the pH value and find the reason of discomfort!
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6 feature-2-pic-what"><img src="../img/her-herlady-what.png" class="img-center" alt="" /></div>
+            </div>
+
+        </div>
     </section>
 
     <!-- Hergeia特色 -->
@@ -167,8 +161,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="col-md-12 feature-2-pic wow fadeInLeft">
-                        <h5 class="her-feature-title">Or, when you have the following needs</h5>
+                    <div class="col-md-12 feature-2-pic">
+                        <h5 class="her-feature-title">If you have the following concerns, let Hergeia helps you!</h5>
                     </div>
                 </div>
             </div>
@@ -179,7 +173,7 @@
                             <span class="icons c1"><img src="../img/her-herlady-need-ache.png" alt="icon" /></span>
                             <div class="box-area">
                                 <h3 class="lady-why-title">Itching or burning sensation of the private part</h3>
-                                <p><br>Vaginal itch or burn, Hergeia saves you the embarrasment of expresing your discomfort!
+                                <p><br>Vaginal itch or burn, Hergeia saves you the “embarrassment” of “expressing” your discomfort!
                                 </p>
 
                             </div>
@@ -196,7 +190,7 @@
                             <span class="icons c3"><img src="../img/her-herlady-need-pregnant.png" alt="icon" /></span>
                             <div class="box-area">
                                 <h3 class="lady-why-title">Pregnancy planning</h3>
-                                <p><br><br>Ready to be a mother? Regular screening prepares the prefect healthy environment for your baby!</p>
+                                <p><br><br>Ready to be a mother? Regular screening prepares the perfect healthy environment for your baby!</p>
                             </div>
                         </div>
                         <div class="col-md-3 wow fadeInRight text-center">
@@ -207,19 +201,39 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Hergeia使用 -->
+    <section id="content-her-ph">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="col-md-12 feature-2-pic">
+                        <p>1 minute for reaction, easy color reading<br>“Hergeia-pH Kit for Vaginal Discharge” detects the pH change of your discharge to know your health, raise possible causes of infection, and demonstrates the results by color for easy readout.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 feature-2-pic"><img src="../img/her-herlady-ph.png" class="img-center" alt="" />
+                    <div class="box-area">
+                        <p class="herlady-ph-content">Read the color, and learn about your body. Stay home, fast, helps you to understand the problem in no time!</p>
+                    </div>
 
                 </div>
             </div>
-
-
         </div>
     </section>
+
     <!-- 賀小姐特色 -->
     <section id="services">
         <div class="container wow fadeInUp">
             <div class="row">
                 <div class="col-md-12 feature-2-pic">
-                    <h5 class="her-feature-title">What can Hergeia offer?</h5>
+                    <h5 class="her-feature-title">Hergeia gives you the most comfortable self-diagnosis experiences</h5>
+                    <p>Self-sampling + Quick diagnosis + Keeping privacy</p>
                     <div class="section-title-divider"></div>
                 </div>
             </div>
@@ -268,17 +282,17 @@
     <!-- 賀小姐商品 -->
     <section id="product-lady">
         <div class="container">
-            <div class="row wow fadeInRight">
+            <div class="row">
                 <br><br>
                 <div class="col-md-6 col-sm-6">
-                    <div class="feature-2-pic-what wow fadeInLeft"><img src="../img/Her_lady-product.png" class="img-center" alt="" /></div>
+                    <div class="feature-2-pic-what"><img src="../img/Her_lady-product.png" class="img-center" alt="" /></div>
                 </div>
                 <div class="product-content col-md-6 col-sm-6">
                     <div class="about-text">
 
-                        <h5 class="herlady-product">Hergeia Screening Kit for Vaginal Infection</h5>
+                        <h5 class="herlady-product">Hergeia-pH Kit for Vaginal Discharge</h5>
                         <p>The most understanding friend about your private part</p>
-                        <h3 class="herlady-price">Price: NT$ 250<br><br></h3>
+                        <h3 class="herlady-price">Price: NT$ 500<br><br></h3>
 
                     </div>
 
@@ -313,7 +327,7 @@
                                     <i class="fa fa-quote-right fa-2x" aria-hidden="true"></i>
                                 </div>
                                 <!-- Clients content -->
-                                <p class="message text-center">Initially I just felt a little discomfort at the private part, but wasn’t sure. Who knew! The test was positive, the colour changed! I had to see the doctor then, thankfully the situation was mild.
+                                <p class="message text-center">Initially I just felt a little discomfort at the private part, but wasn’t sure. Who knew! The test was positive, the color changed! I had to see the doctor then, thankfully the situation was mild.
                                     <br><br>
                                 </p>
                             </div>
@@ -391,13 +405,13 @@
                     <div class="skill-home-solid clearfix">
                         <div class="col-md-4 text-center">
                             <div class="box-area-notice">
-                                <p class="notice-label">Not suitable for: <br> 1. Color blind.<br> 2. No sexual experience.<br> 3. Already using vaginal supplement.<br> 4. Already using vaginal local estrogen therapy.<br>5. Any signs of vaginal bleeding or period.</p>
+                                <p class="notice-label">Not suitable for: <br> 1. color vision deficiency<br> 2. No sexual experience.<br> 3. Already using vaginal supplement.<br> 4. Already using vaginal local estrogen therapy.<br>5. Any signs of vaginal bleeding or period.</p>
 
                             </div>
                         </div>
                         <div class="col-md-4 text-center">
                             <div class="box-area-notice">
-                                <p class="notice-label">Avoid sexual activity or vaginal wash/treatement 24 h prior to using the product.</p>
+                                <p class="notice-label">Avoid sexual activity or vaginal treatment 36 hours and vaginal wash 24 hours, prior to using the product.</p>
                             </div>
                         </div>
                         <div class="col-md-4 text-center">
@@ -409,8 +423,7 @@
                     <div class="skill-home-solid clearfix">
                         <div class="col-md-4 text-center">
                             <div class="box-area-notice">
-                                <p class="notice-label">Use the kit immediately after opening.</p>
-
+                                <p class="notice-label">Use the kit immediately after opening. Read the color change before test paper dry out. This kit is for quick-examination, the result cannot replace the doctor's diagnosis.</p>
                             </div>
                         </div>
                         <div class="col-md-4 text-center">
@@ -432,7 +445,7 @@
     <section id="qaContent">
         <div class="container">
 
-            <div class="row  wow fadeInRight">
+            <div class="row">
                 <div class="col-md-4">
                     <div>
                         <ul class="accordionPart">
@@ -456,7 +469,7 @@
                         <ul class="accordionPart">
                             <li>
                                 <div class="qa_title"><i class="fa fa-angle-right"></i> Could I be infected by multiple pathogens at the same time ?</div>
-                                <div class="qa_content">Yes. One report shows that 21.1% of the women suspecting with yeast infection were actually also infected with trichomoniasis.
+                                <div class="qa_content">Yes. One report shows that 21.1% of the women suspecting with yeast infection were actually also infected with trichomoniasis or bacteria.
                                 </div>
                             </li>
                         </ul>
@@ -514,7 +527,7 @@
                         <ul class="accordionPart">
                             <li>
                                 <div class="qa_title"><i class="fa fa-angle-right"></i> Are there other factors that could affect my testing ?</div>
-                                <div class="qa_content">Yes, in addition to bacterial and trichomoniasis, other factors such as blood, sperm, menopause and post-menopause (low estrogen level) also could affect vaginal pH.
+                                <div class="qa_content">Yes, in addition to bacterial and trichomoniasis, other factors such as blood, sperm, ovulatory period, menopause and post-menopause (low estrogen level) also could affect vaginal pH.
                                 </div>
                             </li>
                         </ul>
@@ -543,32 +556,33 @@
             <div class="container">
                 <div class="row">
 
-                    <div class="col-lg-6 col-xs-12 footer-txt text-lg-left text-center">
+                    <div class="col-lg-4 col-xs-12 footer-txt text-lg-left text-center">
 
                         <img class="footer-logo" src="../img/logo-her-white.png" alt="logo">
 
 
                     </div>
 
-                    <div class="col-lg-6 col-xs-12 text-lg-right text-center">
+
+                    <div class="col-lg-8 col-xs-12 text-lg-right text-center">
                         <ul class="list-inline">
                             <li class="list-inline-item">
-                                <a href="index.html#intro">Concepts</a>
+                                <a href="index.html#intro">Concept and Features</a>
                             </li>
 
                             <li class="list-inline-item">
-                                <a href="index.html#content-her-feature">Features</a>
-                            </li>
-
-                            <li class="list-inline-item">
-                                <a href="index.html#goods">Products</a>
+                                <a href="index.html#goods">Vaginal Infection</a>
                             </li>
 
                             <li class="list-inline-item">
                                 <a href="index.html#contact-her">Contact us</a>
                             </li>
+
                             <li class="list-inline-item">
-                                <a href="http://www.hygeiatouch.com/en/" target="_blank">HygeiaTouch</a>
+                                <a href="https://www.facebook.com/Hergeia/" target="_blank">facebook</a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="http://www.hygeiatouch.com" target="_blank">HygeiaTouch</a>
                             </li>
 
                         </ul>
@@ -604,11 +618,9 @@
             event.preventDefault();
             $(this).ekkoLightbox();
         });
-
     </script>
     <script>
         new WOW().init();
-
     </script>
 </body>
 
