--- a/en/index.html
+++ b/en/index.html
@@ -52,12 +52,11 @@
 
                     <div id="navbar-scroll" class="collapse navbar-collapse navbar-themers navbar-right">
                         <ul class="nav navbar-nav">
-                            <li><a href="#intro">Concepts</a></li>
-                            <li><a href="#content-her-feature">Features</a></li>
-                            <li><a href="#goods">Products</a></li>
+                            <li><a href="#intro">Concept and Features</a></li>
+                            <li><a href="#goods">Vaginal Infection</a></li>
                             <li><a href="#contact-her">Contact us</a></li>
+                            <li><a href="https://www.facebook.com/Hergeia/" target="_blank">facebook</a></li>
                             <li><a href="../zh/index.html">中文</a></li>
-
                         </ul>
                     </div>
                 </div>
@@ -70,10 +69,10 @@
                     <div class="intro-box">
                         <div class="intro">
                             <h1 class="wow fadeInLeft">
-                                Laides, you deserve to treat yourself better<br><br>
+                                <br>Ladies, you deserve to treat yourself better<br>
                             </h1>
+                            <h4 class="wow fadeInLeft">The private and comfortable health diagnosis<br><br><br></h4>
                             <div class="head-btn wow fadeInLeft">
-
                                 <a href="#intro" class="btn-primary play-market">
                                     <i class="fa fa-arrow-down" aria-hidden="true"></i>
                                 </a>
@@ -97,22 +96,16 @@
 
                     <!-- feature content -->
                     <div class="col-md-6 wow fadeInRight">
-                        <h2 class="intro-title">What is Hergeia</h2>
+                        <h2 class="intro-title">About Hergeia</h2>
                         <p class="intro-p">Ladies deserves better care.<br>If you want to be healthy and confident like a goddess, you need to listen to your body's voice.<br>Hergeia continues to develop lines of product to help you feel safer, intimiately caring for your private body !<br>
-
                         </p>
-
                     </div>
-
                 </div>
-
             </div>
         </div>
 
         <!-- Hergeia特色 -->
         <section id="content-her-feature">
-
-
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -132,7 +125,6 @@
                                 <div class="box-area">
                                     <h3></h3>
                                     <p>Small product, great privacy<br></p>
-
                                 </div>
                             </div>
                             <div class="col-md-3 wow fadeInLeft text-center">
@@ -169,16 +161,20 @@
             <div class="container">
                 <div class="row">
 
-                    <div class="col-md-6 wow fadeInRight">
+                    <div class="col-md-7 wow fadeInRight">
                         <div>
-                            <h2 class="her-goods-title"><br><br>Hergeia - Vaginal Discharge Self-Test</h2>
-                            <p class="her-goods-content">(TFDA approval No. 006714)<br><br>Special pattened blocking design ensures your comfort and safty during testing Double-notch design in the front saves you the trouble of making contact with the reagent.<br>Hergeia understands the discomforts of your private part. No more awkward moments, no more embarrasment. Just follow the simple 5 steps, the results will come out in a short time.
+                            <h2 class="her-goods-title"><br><br>Hergeia-pH Kit for Vaginal Discharge</h2>
+                            <p class="her-goods-content">(TFDA approval No. 006714)<br>Hergeia understands the discomforts of your private part.<br><br>Special patented blocking design ensures your comfort and safety during testing.<br>Double-layer notch design in the front saves you the trouble of making contact with the reagent.<br><br>No more awkward moments, no more embarrassment.<br>Just follow the simple 5 steps, the results will come out in about 1 minute.
                             </p>
                             <div class="btn-section-her"><a href="herlady.html" class="btn-default-her">To learn more</a></div>
                         </div>
                         <br/>
                     </div>
-                    <div class="col-md-6 feature-2-pic-her wow fadeInLeft"><img src="../img/her-index-product.png" class="img-center" alt="" /></div>
+                    <div class="col-md-5 feature-2-pic-her wow fadeInLeft">
+                        <div>
+                            <p><br></p>
+                        </div>
+                        <img src="../img/her-index-product.png" class="img-center" alt="" /></div>
                 </div>
 
             </div>
@@ -202,7 +198,7 @@
                                         <i class="fa fa-quote-right fa-2x" aria-hidden="true"></i>
                                     </div>
                                     <!-- Clients content -->
-                                    <p class="message text-center">All of our products have passed clinical trails and received multiple patents. We have strict control on the quality of every item to ensure your experience.<br>
+                                    <p class="message text-center">All of our products have passed clinical trials and received multiple patents.<br>We have strict control on the quality of every item to ensure your experience.<br>
                                     </p>
                                 </div>
 
@@ -265,29 +261,29 @@
                 <div class="container">
                     <div class="row">
 
-                        <div class="col-lg-6 col-xs-12 footer-txt text-lg-left text-center">
+                        <div class="col-lg-4 col-xs-12 footer-txt text-lg-left text-center">
 
                             <img class="footer-logo" src="../img/logo-her-white.png" alt="logo">
 
 
                         </div>
 
-                        <div class="col-lg-6 col-xs-12 text-lg-right text-center">
+                        <div class="col-lg-8 col-xs-12 text-lg-right text-center">
                             <ul class="list-inline">
                                 <li class="list-inline-item">
-                                    <a href="#intro">Concepts</a>
+                                    <a href="#intro">Concept and Features</a>
                                 </li>
 
                                 <li class="list-inline-item">
-                                    <a href="#content-her-feature">Features</a>
+                                    <a href="index.html#goods">Vaginal Infection</a>
                                 </li>
 
                                 <li class="list-inline-item">
-                                    <a href="#goods">Products</a>
+                                    <a href="index.html#contact-her">Contact us</a>
                                 </li>
 
                                 <li class="list-inline-item">
-                                    <a href="#contact-her">Contact us</a>
+                                    <a href="https://www.facebook.com/Hergeia/" target="_blank">facebook</a>
                                 </li>
                                 <li class="list-inline-item">
                                     <a href="http://www.hygeiatouch.com" target="_blank">HygeiaTouch</a>
@@ -326,11 +322,9 @@
                 event.preventDefault();
                 $(this).ekkoLightbox();
             });
-
         </script>
         <script>
             new WOW().init();
-
         </script>
     </div>
 </body>
