--- a/zh/herlady.html
+++ b/zh/herlady.html
@@ -220,7 +220,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-12 feature-2-pic wow fadeInRight"><img src="../img/her-herlady-ph.png" class="img-center" alt="" />
+                <div class="col-md-12 feature-2-pic"><img src="../img/her-herlady-ph.png" class="img-center" alt="" />
                     <div class="box-area">
                         <p class="herlady-ph-content">賀小姐pH值檢驗棒，能利用陰道分泌物的酸鹼值，分析是否感染及可能的感染原因<br>簡單的顏色標示，讓妳一眼就可明白結果，賀小姐給妳最貼心舒適的檢測方式</p>
                     </div>
@@ -282,10 +282,10 @@
     <!-- 賀小姐商品 -->
     <section id="product-lady">
         <div class="container">
-            <div class="row wow fadeInRight">
+            <div class="row">
                 <br><br>
                 <div class="col-md-6 col-sm-6">
-                    <div class="feature-2-pic-what wow fadeInLeft"><img src="../img/Her_lady-product.png" class="img-center" alt="" /></div>
+                    <div class="feature-2-pic-what"><img src="../img/Her_lady-product.png" class="img-center" alt="" /></div>
                 </div>
                 <div class="product-content col-md-6 col-sm-6">
                     <div class="about-text">
@@ -609,11 +609,9 @@
             event.preventDefault();
             $(this).ekkoLightbox();
         });
-
     </script>
     <script>
         new WOW().init();
-
     </script>
 </body>
 
