--- a/zh/index.html
+++ b/zh/index.html
@@ -100,18 +100,13 @@
                             <br> 而Hergeia不斷研發系列產品，
                             <br> 幫助你更安心、私密的關愛自己的身體！
                         </p>
-
                     </div>
-
                 </div>
-
             </div>
         </div>
 
         <!-- Hergeia特色 -->
         <section id="content-her-feature">
-
-
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -160,8 +155,6 @@
 
                     </div>
                 </div>
-
-
             </div>
         </section>
         <!-- 賀小姐商品 -->
@@ -169,7 +162,7 @@
             <div class="container">
                 <div class="row">
 
-                    <div class="col-md-6 wow fadeInRight">
+                    <div class="col-md-7 wow fadeInLeft">
                         <div>
                             <h2 class="her-goods-title"><br>Hergeia賀小姐-陰道分泌物pH值檢驗棒</h2>
                             <p class="her-goods-content">(衛部醫器製壹字第006714)<br>陰道炎的不適感，賀小姐最了解！<br><br>特殊專利檔板設計，讓您在檢測過程中能感到舒適安心<br>前端雙層凹槽設計，替您解決試劑接觸肌膚的困擾<br><br>您再也不需要因為內診，感到緊張害羞<br>只要簡單五步驟，約一分鐘就能快速得知結果
@@ -178,7 +171,11 @@
                         </div>
                         <br/>
                     </div>
-                    <div class="col-md-6 feature-2-pic-her wow fadeInLeft"><img src="../img/her-index-product.png" class="img-center" alt="" /></div>
+                    <div class="col-md-5 feature-2-pic-her wow fadeInRight">
+                        <div>
+                            <p><br></p>
+                        </div>
+                        <img src="../img/her-index-product.png" class="img-center" alt="" /></div>
                 </div>
 
             </div>
@@ -265,14 +262,13 @@
                 <div class="container">
                     <div class="row">
 
-                        <div class="col-lg-6 col-xs-12 footer-txt text-lg-left text-center">
+                        <div class="col-lg-4 col-xs-12 footer-txt text-lg-left text-center">
 
                             <img class="footer-logo" src="../img/logo-her-white.png" alt="logo">
 
-
                         </div>
 
-                        <div class="col-lg-6 col-xs-12 text-lg-right text-center">
+                        <div class="col-lg-8 col-xs-12 text-lg-right text-center">
                             <ul class="list-inline">
                                 <li class="list-inline-item">
                                     <a href="#intro">理念與特色</a>
