[debug]revise FAQ content

--- a/en/herlady.html
+++ b/en/herlady.html
@@ -173,7 +173,7 @@
                             <span class="icons c1"><img src="../img/her-herlady-need-ache.png" alt="icon" /></span>
                             <div class="box-area">
                                 <h3 class="lady-why-title">Itching or burning sensation of the private part</h3>
-                                <p><br>Vaginal itch or burn, Hergeia saves you the “embarrassment” of “expressing” your discomfort!
+                                <p><br>Vaginal itch or burn, Hergeia saves you the embarrassment of expressing your discomfort!
                                 </p>
 
                             </div>
@@ -292,7 +292,7 @@
 
                         <h5 class="herlady-product">Hergeia-pH Kit for Vaginal Discharge</h5>
                         <p>The most understanding friend about your private part</p>
-                        <h3 class="herlady-price">Price: NT$ 500<br><br></h3>
+                        <h3 class="herlady-price">Price：NT$ 500<br><br></h3>
 
                     </div>
 
@@ -618,9 +618,11 @@
             event.preventDefault();
             $(this).ekkoLightbox();
         });
+
     </script>
     <script>
         new WOW().init();
+
     </script>
 </body>
 
