--- a/zh/herlady.html
+++ b/zh/herlady.html
@@ -89,7 +89,7 @@
                 <div class="main_video_area sections text-center">
                     <div class="head_title">
                         <h5 class="herlady-movie-title">根據統計，全球75%的女性，一生之中最少會感染一次陰道炎！</h5>
-                        <p class="herlady-movie-content">反反覆覆的搔癢跟疼痛，煩悶又惱人！到底什麼是陰道感染？又為什麼會發炎？要怎麼緩解? 讓醫生來告訴妳！</p>
+                        <p class="herlady-movie-content">反反覆覆的搔癢跟疼痛，煩悶又惱人！到底什麼是陰道感染？又為什麼會發炎？要怎麼緩解？讓醫生來告訴妳！</p>
                     </div>
                     <div class="main_video_content">
                         <div class="col-sm-4">
@@ -401,7 +401,7 @@
                     <div class="skill-home-solid clearfix">
                         <div class="col-md-4 text-center">
                             <div class="box-area-notice">
-                                <p class="notice-label">不適合使用本產品之女性：<br> 1. 對顏色判讀有困難者<br> 2. 未有性行為者<br> 3. 已使用陰道藥物者<br> 4. 月經期間或陰道出血者</p>
+                                <p class="notice-label">不適合使用本產品之女性：<br> 1. 對顏色判讀有困難者<br> 2. 未有性行為者<br> 3. 已使用陰道塞劑者<br> 4. 使用陰道置入之雌性激素藥物者<br> 5. 月經期間或陰道出血者</p>
 
                             </div>
                         </div>
@@ -523,7 +523,7 @@
                         <ul class="accordionPart">
                             <li>
                                 <div class="qa_title"><i class="fa fa-angle-right"></i> 有其他因素會影響我的檢測結果嗎？</div>
-                                <div class="qa_content">是的，除了細菌型及陰道滴蟲之外，還有其他因素也可能會影響陰道酸鹼值，如：血、精液<br>另外，更年期婦女分泌物過少，檢驗棒無法充分浸潤，可能影響檢驗結果。排卵期因子宮腔內黏液大量分泌，亦可能影響檢驗結果。
+                                <div class="qa_content">是的，除了細菌型及陰道滴蟲之外，還有其他因素也可能會影響陰道酸鹼值，如：血、精液。<br>另外，更年期婦女分泌物過少，檢驗棒無法充分浸潤，可能影響檢驗結果。排卵期因子宮腔內黏液大量分泌，亦可能影響檢驗結果。
                                 </div>
                             </li>
                         </ul>
@@ -609,9 +609,11 @@
             event.preventDefault();
             $(this).ekkoLightbox();
         });
+
     </script>
     <script>
         new WOW().init();
+
     </script>
 </body>
 
